// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisCollapsible in opened state matches the snapshot 1`] = `
<div
  className="sc-bdVaJa iEJpkO"
>
  <button
    aria-expanded={true}
    className="sc-bwzfXH kkDEGu"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-htpNat bYQXEr sc-bZQynM cmRxon"
    />
    <h3
      className="sc-bxivhb kiAvRw"
    >
       
      Problems (4)
       
    </h3>
  </button>
  <ul
    className="sc-ifAKCX dHcsqz"
  >
    <li>
       First item 
    </li>
    <li>
       Second item 
    </li>
    <li>
       Third item 
    </li>
    <li>
       Fourth item 
    </li>
  </ul>
</div>
`;

exports[`the default AnalysisCollapsible matches the snapshot 1`] = `
<div
  className="sc-bdVaJa iEJpkO"
>
  <button
    aria-expanded={false}
    className="sc-bwzfXH kkDEGu"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-htpNat bYQXEr sc-EHOje gGDgkd"
    />
    <h3
      className="sc-bxivhb kiAvRw"
    >
       
      Problems (4)
       
    </h3>
  </button>
  <ul
    className="sc-ifAKCX dHcsqz"
  />
</div>
`;
